--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 .carousel-item img{
     height: 45vw;
 }
+@media screen and (max-width:576px){
+    .course-photo img{
+        width: 100%;
+    }
+}
