--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-.carousel-item img{
+.first-caro img{
     height: 45vw;
+}
+.rating img{
+    width:20px;
+    height:20px;
+
 }
 @media screen and (max-width:576px){
     .course-photo img{
